1_kubernetes/k8s/service2/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service2-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: "Prefix"
            backend:
              service:
                name: service2-service
                port:
                  number: 80
